--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,19 +9,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  provider: ^6.1.1
   # Service locator
   get_it: ^7.6.7
 
   # Bloc for state management
   flutter_bloc: ^8.1.4
-
+  json_annotation: ^4.8.0
   # Value equality
   equatable: ^2.0.5
 
   # Functional programming
   dartz: ^0.10.1
-
+  go_router: ^10.0.0
   # Remote API (data_connection_checker đã deprecated → dùng connectivity_plus)
   connectivity_plus: ^6.0.3
   http: ^1.2.2
@@ -34,3 +34,4 @@ dev_dependencies:
     sdk: flutter
   mockito: ^5.4.4
   build_runner: ^2.4.8
+  json_serializable: ^6.6.1
